# discover

./: CMakeLists.txt
appiumtests/: flatpak.py
discover/: CMakeLists.txt  DiscoverObject.cpp  LimitedRowCountProxyModel.cpp  LimitedRowCountProxyModel.h
discover/qml/: ApplicationDelegate.qml
libdiscover/: CMakeLists.txt
libdiscover/appstream/: AppStreamUtils.cpp
libdiscover/backends/: CMakeLists.txt
libdiscover/backends/FlatpakBackend/: FlatpakBackend.cpp  FlatpakNotifier.h  FlatpakResource.cpp
libdiscover/backends/KNSBackend/: KNSResource.cpp
libdiscover/backends/SteamOSBackend/: SteamOSBackend.cpp  SteamOSBackend.h
libdiscover/backends/SteamOSBackend/tests/: CMakeLists.txt  SteamOSTest.cpp
libdiscover/backends/SystemdSysupdateBackend/: CMakeLists.txt  SystemdSysupdateBackend.cpp  SystemdSysupdateBackend.h  SystemdSysupdateResource.cpp  SystemdSysupdateResource.h  SystemdSysupdateTransaction.cpp  SystemdSysupdateTransaction.h  SysupdateInternal.cpp  SysupdateInternal.h  org.freedesktop.sysupdate1.xml
